# redis-rust-demo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RUST.md  docker-compose.yml  redis-demo-guide.html  redis-rust-demo-spec.md
.github/workflows/: ci.yml
scripts/: test_coverage.sh
src/: lib.rs  main.rs
src/cli/: commands.rs  commands_tests.rs  mod.rs
src/demos/: basic_operations.rs  data_structures.rs  data_structures_tests.rs  mod.rs  rust_errors_demo.rs
src/models/: user.rs
src/utils/: error.rs  mod.rs  redis_client.rs
tests/: integration_tests.rs
tests/common/: mod.rs
