[package]
name = "redis-rust-demo"
version = "0.1.0"
edition = "2021"
authors = ["Redis Rust Demo"]
description = "A comprehensive Rust application demonstrating Redis features and patterns"

[dependencies]
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "r2d2"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
r2d2 = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
mockall = "0.12"
tokio-test = "0.4"
serial_test = "3.0"
proptest = "1.4"
fake = "2.9"
wiremock = "0.6"

# Code coverage with tarpaulin
[package.metadata.tarpaulin]
exclude-files = ["tests/*", "benches/*"]
ignored = ["demos/mod.rs", "cli/mod.rs", "models/mod.rs", "utils/mod.rs"]
timeout = "300"
branch = true
skip-clean = false
